Bug fix: correct the issue where the settings overlap over the canvas when the canvas in smaller than the screen size

--- a/awestruct/css/styles.sass
+++ b/awestruct/css/styles.sass
@@ -100,6 +100,7 @@ body
 	color: $foreground-color
 	text-align: center
 	min-width: 320px
+	width: 100%
 
 h1, h2, h3, h4, h5, h6, label, a, a:active, a:visited, a:hover
 	color: $foreground-color
